# WEB_dz_7

./: CLI_application.py  models.py  pyproject.toml  query.py  seed.py  try.py
alembic/versions/: 318f4ad5e1bf_init.py
