[tool.poetry]
name = "dz-7"
version = "0.1.0"
description = ""
authors = ["9-Bogdan <127949078+9-Bogdan@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "dz_7"}]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.11.3"
sqlalchemy = "^2.0.20"
psycopg2-binary = "^2.9.7"
faker = "^19.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
